  renamed to ``node``, is now visible by default and has been trimmed to only
  include ``node['id']`` and ``node['name']``. In order to get all information
  a join query can be used with ``sys.nodes``.

- ``discovery.type`` setting has been removed. To enable EC2 discovery
  ``discovery.zen.hosts_provider`` setting needs to be set to ``ec2``.

Changes
=======

- Added support in the Postgres Wire Protocol's SimpleQuery mode to process a
  query string which contains multiple queries delimited by semicolons.

- Added a new tab for views in the Admin UI which lists available views and
  their properties.

- Multiple Admin UI improvements.

- Updated the bundled CrateDB Shell (``crash``) to version ``0.24.0`` which
  adds support for default schema for connections.

- Fully qualified column names including a schema name will no longer match on
  table aliases.

- The default user if enterprise is disabled changed from ``null`` to
  ``crate``. This causes entries in ``sys.jobs`` to show up with ``crate`` as
  username. Functions like ``user`` will also return ``crate`` if enterprise is
  enabled but the user module is not available.

- Display the node information (name and id) of jobs in the ``sys.jobs`` table.

- Added support for ordering on analysed or partitioned columns.

- Changed the primary key constraints of the information schema tables
  ``table_constraints``, ``referential_constraints``, ``table_partitions``,
  ``key_column_usage``, ``columns``, and ``tables`` to be SQL compliant.

- Fixed path of logfile name in rotation pattern in ``log4j2.properties``. It
  now writes into the correct logging directory instead of the parent
  directory.

- Added support for views which can be created using the new ``CREATE VIEW``
  statement and dropped using the ``DROP VIEW`` statement. Views are listed in
  ``information_schema.views`` and they show up in
  ``information_schema.tables`` as well as ``information_schema.columns``.
